[tool.poetry]
name = "python_web_hw__02"
version = "1.0.0"
description = ""
authors = ["Rai <154880397+Rai925@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
